Noteworthy changes in version 1.23.3 (unrelease)
-------------------------------------------------

 * Extended gpgme_op_encrypt*, gpgme_op_encrypt_sign*, and gpgme_op_sign*
   to allow reading the input data directly from a file.  [T6550]

 * Interface changes relative to the 1.23.2 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_ENCRYPT_FILE              NEW.
 GPGME_SIG_MODE_FILE             NEW.


Noteworthy changes in version 1.23.2 (2023-11-28)
-------------------------------------------------

 * Preserve more specific existing failure code.  [T6575]

 * qt: Start dirmngr with gpgconf to avoid multiple instances. [T6833]

 * qt: On Windows, use UTF-8 when logging the error text.  [T5960]

 * qt: Remove left-over partial files more persistently.  [T6584]

 * qt: Use a temporary file name when creating signed or encrypted
   archives. [T6721]

 * qt: Build Qt 6 bindings with -fPIC if requested or Qt 6 was built with
   this flag. [T6781]

 Notes:
 ~~~~~~
 qt: DefaultKeyGenerationJob     DEPRECATED.

 [c=C43/A32/R1 cpp=C26/A20/R1 qt=C20/A5/R1]

 Release-info: https://dev.gnupg.org/T6782


Noteworthy changes in version 1.23.1 (2023-10-27)
-------------------------------------------------

 * w32: Change gpgme-w32-spawn to use Unicode arguments.  [T6728]

 [c=C43/A32/R0 cpp=C26/A20/R0 qt=C20/A5/R0]

 Release-info: https://dev.gnupg.org/T6774


Noteworthy changes in version 1.23.0 (2023-10-25)
-------------------------------------------------

 * Support GPGME_ENCRYPT_ALWAYS_TRUST also for S/MIME.  [T6559]

 * New keylist mode GPGME_KEYLIST_MODE_WITH_V5FPR.  [T6705]

 * New key capability flags has_*.  [T6748]

 * gpgme-tool: Support use of Windows HANDLE.  [T6634]

 * qt: Support refreshing keys via WKD.  [T6672]

 * qt: Handle cancel in changeexpiryjob.  [T6754]

 * Interface changes relative to the 1.22.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_KEYLIST_MODE_WITH_V5FPR   NEW.